<resources>
    <string name="app_name">ARtisanal</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="cart_toast_msg">Item successfully added to cart!</string>
    <string name="main_menu">Main Menu</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_submission_msg">Your order has been sent to the kitchen!</string>
    <string name="you_paid">You Paid:</string>
    <string name="back_to_homepage">Back to Home Page</string>
    <string name="promotions">Promotions</string>
    <string name="check_out">Check Out</string>
    <string name="your_order">Your Order</string>
    <string name="total">Total:</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="cart">Cart</string>
    <string name="ar">AR</string>
    <string name="clear">Your cart has been successfully cleared!</string>
    <string name="search_prompt">Search Food...</string>

    <string name="home_nav">Home</string>
    <string name="promotion_nav">Promotion</string>
    <string name="cart_nav">Cart</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="clear_cart_msg">Cart has been cleared</string>

    <string name="price">Price:</string>
</resources>