<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#130F40"
    tools:context=".View_Cart_Fragment">

    <ImageView
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        app:srcCompat="@drawable/card_gradient"
        tools:layout_editor_absoluteX="0dp" />


    <ImageView
        android:id="@+id/logoBackground"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:alpha="0.9"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/maintext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/artisanal_logo" />

    <TextView
        android:id="@+id/maintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sc"
        android:text="@string/check_out"
        android:textColor="#EEE9F3"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@id/topLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/topLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/CartItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/yourOrderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/your_order"
            android:layout_marginEnd="150dp"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/clearCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#764DE8"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/clear_cart"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/topLinear"
            tools:layout_editor_absoluteY="141dp" />


    </LinearLayout>





    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CartItems"
        android:layout_width="0sp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="#9491cf"
        app:layout_constraintBottom_toTopOf="@+id/wordLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/wordLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CartItems">

        <TextView
            android:id="@+id/youpaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/you_paid"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginEnd="150dp"
            app:layout_constraintEnd_toStartOf="@id/totalPrice"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="102dp"
            android:layout_height="28dp"
            android:fontFamily="sans-serif-black"
            android:text="$0.00"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/confirmOrderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="104dp"
        android:text="@string/confirm_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordLinear" />




</androidx.constraintlayout.widget.ConstraintLayout>