<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/orderSummaryFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#130F40"
        tools:context=".OrderSummaryFragment">

        <ImageView
            android:id="@+id/gradient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.9"
            app:srcCompat="@drawable/card_gradient"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/logoBackground"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingTop="10dp"
            android:alpha="0.9"
            app:layout_constraintBottom_toTopOf="@+id/maintext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/artisanal_logo"/>

        <TextView
            android:id="@+id/maintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sc"
            android:layout_marginBottom="10dp"
            android:text="@string/order_summary"
            android:textColor="#EEE9F3"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@id/submitText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/submitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/order_submission_msg"
            android:textColor="#7DC86C"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/OrderItems"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/OrderItems"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="#9491cf"
            app:layout_constraintTop_toBottomOf="@id/submitText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/wordLinear" />

        <LinearLayout
            android:id="@+id/wordLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/OrderItems">

                <TextView
                    android:id="@+id/youpaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/you_paid"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginEnd="150dp"
                    app:layout_constraintEnd_toStartOf="@id/totalPrice"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="102dp"
                    android:layout_height="28dp"
                    android:fontFamily="sans-serif-black"
                    android:text="$0.00"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
        </LinearLayout>

        <Button
            android:id="@+id/goHomeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="30sp"
            android:text="@string/back_to_homepage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wordLinear" />


</androidx.constraintlayout.widget.ConstraintLayout>
